--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "build": "cross-env NODE_ENV=development webpack --mode development",
-    "build:prod": "cross-env NODE_ENV=production webpack --mode production --config config/webpack.config.prod.js",
+    "build:prod": "cross-env BUILD_ENV=yes NODE_ENV=production webpack --mode production --config config/webpack.config.prod.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development",
     "start:prod": "cross-env NODE_ENV=production webpack-dev-server --mode production --config config/webpack.config.prod.js"
   },
@@ -38,6 +38,7 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-minifier": "^3.5.18",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "node-sass": "^4.9.0",
