--- a/package.json
+++ b/package.json
@@ -1,61 +1,63 @@
 {
   "name": "footwork-generator",
   "description": "The Footwork Generator for swing dancers",
-  "version": "2018.7.6",
+  "version": "2020.4.1",
   "author": "fwg@it4t.ru",
   "private": true,
   "scripts": {
     "build": "cross-env NODE_ENV=development webpack --mode development",
     "build:prod": "cross-env BUILD_ENV=yes NODE_ENV=production webpack --mode production --config config/webpack.config.prod.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --config config/webpack.config.dev.js",
     "start:prod": "cross-env NODE_ENV=production webpack-dev-server --mode production --config config/webpack.config.prod.js"
   },
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": "^0.19.2",
     "debounce": "^1.2.0",
-    "element-ui": "^2.13.0",
-    "vue": "^2.6.10",
-    "vue-class-component": "^6.3.2",
-    "vue-clipboard2": "^0.2.1",
-    "vue-headful": "^2.0.1",
+    "element-ui": "^2.13.1",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-clipboard2": "^0.3.1",
+    "vue-headful": "^2.1.0",
     "vue-ls": "^3.2.1",
     "vue-markdown": "^2.2.4",
-    "vue-property-decorator": "^7.3.0",
+    "vue-property-decorator": "^8.4.1",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
-    "@types/node": "^10.17.6",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@types/node": "^13.13.2",
     "awesome-typescript-loader": "^5.2.1",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.1.0",
     "babel-plugin-component": "^1.1.1",
     "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "compression-webpack-plugin": "^1.1.12",
-    "copy-webpack-plugin": "^4.6.0",
-    "cross-env": "^5.2.1",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
-    "html-minifier": "^3.5.21",
-    "html-webpack-plugin": "^3.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.1.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.2",
+    "ejs-easy-loader": "^0.1.4",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-minifier": "^4.0.0",
+    "html-webpack-plugin": "^4.2.0",
     "json-loader": "^0.5.7",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "prerender-spa-plugin": "^3.4.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.21.0",
-    "ts-loader": "^4.5.0",
-    "typescript": "^2.9.2",
-    "url-loader": "^1.1.2",
-    "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
+    "raw-loader": "^4.0.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.4",
+    "ts-loader": "^7.0.1",
+    "typescript": "^3.8.3",
+    "url-loader": "^4.1.0",
+    "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   },
   "typings": "./types"
