--- a/package.json
+++ b/package.json
@@ -1,64 +1,59 @@
 {
   "name": "footwork-generator",
-  "description": "The Footwork Generator for swing dancers",
-  "version": "2020.4.1",
-  "author": "fwg@it4t.ru",
+  "version": "2021.8.1",
   "private": true,
+  "description": "The Footwork Generator for swing dancers",
+  "author": "fwg@it4t.ru",
   "scripts": {
-    "build": "cross-env NODE_ENV=development webpack --mode development",
-    "build:prod": "cross-env BUILD_ENV=yes NODE_ENV=production webpack --mode production --config config/webpack.config.prod.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --config config/webpack.config.dev.js",
-    "start:prod": "cross-env NODE_ENV=production webpack-dev-server --mode production --config config/webpack.config.prod.js"
+    "serve": "vue-cli-service serve",
+    "lint": "vue-cli-service lint",
+    "build": "vue-cli-service build --skip-plugins @vue/cli-plugin-eslint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "debounce": "^1.2.0",
-    "element-ui": "^2.13.1",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-clipboard2": "^0.3.1",
-    "vue-headful": "^2.1.0",
-    "vue-ls": "^3.2.1",
-    "vue-markdown": "^2.2.4",
-    "vue-property-decorator": "^8.4.1",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.6"
+    "@mdi/font": "5.9.55",
+    "@soerenmartius/vue3-clipboard": "^0.1.2",
+    "axios": "^0.21.1",
+    "clipboard": "^2.0.8",
+    "core-js": "^3.16.0",
+    "debounce": "^1.2.1",
+    "element-plus": "^1.0.2-beta.70",
+    "headful": "^1.0.3",
+    "register-service-worker": "^1.7.2",
+    "roboto-fontface": "*",
+    "tiny-emitter": "^2.1.0",
+    "vue": "^3.1.4",
+    "vue-class-component": "^8.0.0-beta.3",
+    "vue-ls": "^3.2.2",
+    "vue-property-decorator": "^10.0.0-rc.3",
+    "vue-router": "^4.0.10",
+    "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@types/node": "^13.13.2",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-component": "^1.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^3.1.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.5.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.0",
+    "@vue/cli-plugin-typescript": "~5.0.0-beta.2",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.1.5",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "copy-webpack-plugin": "^5.1.2",
     "ejs-easy-loader": "^0.1.4",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-minifier": "^4.0.0",
-    "html-webpack-plugin": "^4.2.0",
-    "json-loader": "^0.5.7",
-    "node-sass": "^4.13.1",
-    "prerender-spa-plugin": "^3.4.0",
-    "raw-loader": "^4.0.1",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.4",
-    "ts-loader": "^7.0.1",
-    "typescript": "^3.8.3",
-    "url-loader": "^4.1.0",
-    "vue-loader": "^15.9.1",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.7.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.15.0",
+    "html-loader": "^2.1.2",
+    "prerender-spa-plugin": "^3.2.1",
+    "prettier": "^2.2.1",
+    "pwa-asset-generator": "^4.3.4",
+    "sass": "^1.37.0",
+    "sass-loader": "^10.0.0",
+    "typescript": "^4.3.5",
+    "vue-cli-plugin-prerender-spa": "~1.1.6",
+    "vue-loader": "^16.4.0"
   },
   "typings": "./types"
 }
