--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debounce": "^1.2.1",
     "element-plus": "^1.0.2-beta.70",
     "headful": "^1.0.3",
+    "normalize.css": "^8.0.1",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "tiny-emitter": "^2.1.0",
