--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build": "vue-cli-service build --skip-plugins @vue/cli-plugin-eslint"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
+    "@mdi/font": "^6.3.95",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
-    "axios": "^0.21.1",
+    "axios": "^0.23.0",
     "clipboard": "^2.0.8",
-    "core-js": "^3.16.0",
+    "core-js": "^3.18.3",
     "debounce": "^1.2.1",
     "element-plus": "^1.0.2-beta.70",
     "headful": "^1.0.3",
@@ -22,39 +22,39 @@
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "tiny-emitter": "^2.1.0",
-    "vue": "^3.1.4",
+    "vue": "^3.2.20",
     "vue-class-component": "^8.0.0-beta.3",
-    "vue-ls": "^3.2.2",
+    "vue-ls": "^4.0.0",
     "vue-property-decorator": "^10.0.0-rc.3",
-    "vue-router": "^4.0.10",
+    "vue-router": "^4.0.12",
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
-    "@vue/cli-plugin-babel": "^4.5.0",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "@vue/cli-plugin-babel": "^4.5.14",
+    "@vue/cli-plugin-eslint": "^4.5.14",
+    "@vue/cli-plugin-pwa": "^4.5.14",
+    "@vue/cli-plugin-router": "^4.5.14",
     "@vue/cli-plugin-typescript": "~5.0.0-beta.2",
-    "@vue/cli-service": "^4.5.13",
+    "@vue/cli-service": "^4.5.14",
     "@vue/compiler-sfc": "^3.1.5",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/eslint-config-typescript": "^8.0.0",
     "copy-webpack-plugin": "^5.1.2",
     "ejs-easy-loader": "^0.1.4",
-    "eslint": "^6.7.2",
+    "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.15.0",
+    "eslint-plugin-vue": "^7.20.0",
     "html-loader": "^2.1.2",
     "prerender-spa-plugin": "^3.2.1",
-    "prettier": "^2.2.1",
-    "pwa-asset-generator": "^4.3.4",
-    "sass": "^1.37.0",
+    "prettier": "^2.4.1",
+    "pwa-asset-generator": "^5.0.0",
+    "sass": "^1.43.2",
     "sass-loader": "^10.0.0",
-    "typescript": "^4.3.5",
+    "typescript": "^4.4.4",
     "vue-cli-plugin-prerender-spa": "~1.1.6",
-    "vue-loader": "^16.4.0"
+    "vue-loader": "^16.8.1"
   },
   "typings": "./types"
 }
